Fixed user mgmt UI on mobile.

--- a/public/user-mgmt/main.css
+++ b/public/user-mgmt/main.css
@@ -101,10 +101,6 @@ p {
     margin: auto;
 }
 
-#login {
-    width: 50%;
-}
-
 .nav-message {
     font-size: 12px;
 }
@@ -114,69 +110,16 @@ p {
     cursor: pointer;
 }
 
-#sign-up-message {
-    font-size: 16px;
-    text-align: center;
-    color: #5f5f5f;
-}
-
-#sign-up {
-    display: inline-block;
-    color: var(--color-dark-text);
-}
-
-#sign-up:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
 #error-message {
     color: red;
     padding-bottom: 8px;
 }
 
-#login-button {
-    width: 100%;
+#redirect-message {
+    width: 50%;
+    text-align: center;
 }
 
-input, option {
-    font-weight: 300;
-    color: var(--color-dark-text);
-}
-
-.input {
-    font-size: 16px;
-}
-
-.select {
-    margin-bottom: 10px;    
-}
-
-.select > label {
-    padding-right: 7px;
-}
-
-#upload {
-    padding-bottom: 10px;
-}
-
-#role {
-    margin-bottom: 10px;
-}
-
-.edit-button {
-    width: 15px;
-}
-
-#download-icon {
-    padding-left: 5px;
-    width: 20px;
-    color: var(--color-dark-text);
-}
-
-#resume-name {
-    display: inline-block;
-}
 
 @media screen and (max-width: 800px) {
     #topbar {
@@ -225,7 +168,8 @@ input, option {
 
     #main-body {
         width: 100%;
-        margin-top: 30px;
+        margin-top: 40px;
+        padding-top: 25px;
         margin-bottom: 30px;
     }
 
